--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -34,7 +34,7 @@
 
 /* navbar laterale */
 .nav-lat{
-  width: 20%;
+  width: 200px;
   height: calc(100vh - 100px);
   background-color: #000000;
   position: absolute;
@@ -43,15 +43,49 @@
   z-index: 1;
 }
 
+/* logo */
 .logo{
   display: flex;
   align-items: center;
-  justify-content: center;
+  height: 100px;
+  margin-left: 20px;
+}
+
+.logo i{
+  display: none;
 }
 
 .logo img{
-  width: 60%;
+  width: 75%;
 }
+/* logo */
+.list-home{
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  margin-left: 20px;
+}
+
+.list-home a{
+  padding-top: 10px;
+  color: #595959;
+  text-decoration: none;
+}
+
+.list-home a:first-child{
+  color: #ffffff;
+  margin-top: -10px;
+}
+
+.list-home a i{
+  font-size: 25px;
+  margin-right: 5px;
+}
+
+.list-home a:hover{
+  color: #ffffff;
+}
+
 
 /* navbar laterale */
 /* header */
@@ -69,5 +103,41 @@ footer{
   height: 100px;
   background-color: #282828;
 }
-
 /* footer */
+
+/* media query */
+/* @media all and (max-width: 1200px)
+and (min-width: 992px){
+
+}
+
+@media all and (max-width: 992px)
+and (min-width: 768px){
+
+} */
+
+@media all and (max-width: 768px){
+  /* navbar laterale */
+  .nav-lat{
+    width: 50px;
+  }
+
+  .logo{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+
+  .logo img{
+    display: none;
+  }
+
+  .logo i{
+    display: block;
+    font-size: 30px;
+    color: #ffffff;
+  }
+    /* navbar laterale */
+}
