--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -59,6 +59,8 @@
   width: 75%;
 }
 /* logo */
+
+/* parte sopra navbar laterale */
 .list-home{
   display: flex;
   flex-direction: column;
@@ -85,8 +87,26 @@
 .list-home a:hover{
   color: #ffffff;
 }
+/* parte sopra navbar laterale */
+
+/* parte centrale navbar laterale */
+.list-home h5{
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-top: 30px;
+}
+
+#plus i{
+  vertical-align: middle;
+  background-color: #A3A3A3;
+  color: #000000;
+  font-size: 20px;
+  padding: 10px;
+}
 
 
+
+/* parte centrale navbar laterale */
 /* navbar laterale */
 /* header */
 
@@ -118,6 +138,7 @@ and (min-width: 768px){
 
 @media all and (max-width: 768px){
   /* navbar laterale */
+  /* logo */
   .nav-lat{
     width: 50px;
   }
@@ -128,6 +149,7 @@ and (min-width: 768px){
     align-items: flex-start;
     margin-top: 10px;
     margin-left: 0px;
+    height: 50px;
   }
 
   .logo img{
@@ -139,5 +161,28 @@ and (min-width: 768px){
     font-size: 30px;
     color: #ffffff;
   }
-    /* navbar laterale */
+  /* logo */
+
+  .list-home{
+    display: flex;
+    flex-direction: column;
+    font-size: 0;
+    margin-left: 0;
+  }
+
+  .list-home a{
+    display: flex;
+    justify-content: center;
+  }
+
+  .list-home a i{
+    font-size: 25px;
+    margin-right: 0;
+  }
+
+  .dis-none{
+    display: none;
+  }
+
+  /* navbar laterale */
 }
