--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,7 +1,13 @@
 /* header */
+header{
+  width: calc(100vw - 200px);
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
 .nav-top{
-  width: 100%;
-  height: 100px;
+  height: 80px;
   background-color: #080B12;
   display: flex;
   align-items: center;
@@ -31,23 +37,27 @@
   font-size: 14px;
 }
 /* button upgrade */
+/* header */
 
-/* navbar laterale */
-.nav-lat{
-  width: 200px;
-  height: calc(100vh - 100px);
-  background-color: #000000;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
+
+
+/* main */
+main{
+  height: calc(100vh - 80px);
+  overflow-y: auto;
+  display: flex;
 }
-
+/* navbar laterale */
+aside{
+  width: 200px;
+  height: 100%;
+  background-color: #000000;
+}
 /* logo */
 .logo{
   display: flex;
   align-items: center;
-  height: 100px;
+  height: 80px;
   margin-left: 20px;
 }
 
@@ -64,7 +74,7 @@
 .list-home{
   display: flex;
   flex-direction: column;
-  font-size: 15px;
+  font-size: 14px;
   margin-left: 20px;
 }
 
@@ -80,7 +90,7 @@
 }
 
 .list-home a i{
-  font-size: 25px;
+  font-size: 20px;
   margin-right: 5px;
 }
 
@@ -93,7 +103,7 @@
 .list-home h5{
   text-transform: uppercase;
   color: #ffffff;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 #plus i{
@@ -147,21 +157,12 @@
 /* parte sotto nav laterale */
 
 /* navbar laterale */
-/* header */
-
-/* main */
-main{
-  height: calc(100vh - 100px - 100px);
-  overflow-y: auto;
-}
 
 /* main */
 
 /* footer */
 footer{
-  height: 100px;
-  /* position: relative;
-  z-index: 3; */
+  height: 80px;
   background-color: #282828;
 }
 /* footer */
@@ -175,82 +176,85 @@ and (min-width: 992px){
 @media all and (max-width: 992px)
 and (min-width: 768px){
 
-} */
+  } */
 
-@media all and (max-width: 768px){
-  /* navbar laterale */
-  /* logo */
-  .nav-lat{
-    width: 50px;
+  @media all and (max-width: 768px){
+    /* navbar laterale */
+    /* logo */
+    header{
+      width: calc(100vw - 50px);
+    }
+
+    aside{
+      width: 50px;
+    }
+
+    .logo{
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      margin-top: 10px;
+      margin-left: 0px;
+      height: 50px;
+    }
+
+    .logo img{
+      display: none;
+    }
+
+    .logo i{
+      display: block;
+      font-size: 30px;
+      color: #ffffff;
+    }
+    /* logo */
+
+    .list-home{
+      display: flex;
+      flex-direction: column;
+      font-size: 0;
+      margin-left: 0;
+    }
+
+    .list-home a{
+      display: flex;
+      justify-content: center;
+    }
+
+    .list-home a i{
+      font-size: 25px;
+      margin-right: 0;
+    }
+
+    .dis-none{
+      display: none;
+    }
+
+    .dati-utenti{
+      font-size: 0px;
+      margin-left: 0px;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      width: 50px;
+    }
+
+    .dati-utenti span{
+      height: 0;
+    }
+
+    .dati-utenti a:first-child i{
+      margin-right: 0px;
+      color: #595959;
+      font-size: 14px;
+    }
+
+    .dati-utenti a:last-child i{
+      margin-right: 0px;
+      color: #595959;
+      font-size: 30px;
+
+    }
+
+    /* navbar laterale */
   }
-
-  .logo{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 10px;
-    margin-left: 0px;
-    height: 50px;
-  }
-
-  .logo img{
-    display: none;
-  }
-
-  .logo i{
-    display: block;
-    font-size: 30px;
-    color: #ffffff;
-  }
-  /* logo */
-
-  .list-home{
-    display: flex;
-    flex-direction: column;
-    font-size: 0;
-    margin-left: 0;
-  }
-
-  .list-home a{
-    display: flex;
-    justify-content: center;
-  }
-
-  .list-home a i{
-    font-size: 25px;
-    margin-right: 0;
-  }
-
-  .dis-none{
-    display: none;
-  }
-
-  .dati-utenti{
-    font-size: 0px;
-    margin-left: 0px;
-    align-items: center;
-    justify-content: flex-end;
-    position: static;
-    height: 74%;
-
-  }
-
-  .dati-utenti span{
-    height: 0;
-  }
-
-  .dati-utenti a:first-child i{
-    margin-right: 0px;
-    color: #595959;
-    font-size: 14px;
-  }
-
-  .dati-utenti a:last-child i{
-    margin-right: 0px;
-    color: #595959;
-    font-size: 30px;
-
-  }
-
-  /* navbar laterale */
-}
