--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -42,11 +42,6 @@ header{
 
 
 /* main */
-main{
-  height: calc(100vh - 80px);
-  overflow-y: auto;
-  display: flex;
-}
 /* navbar laterale */
 aside{
   width: 200px;
@@ -155,14 +150,27 @@ aside{
   vertical-align: middle;
 }
 /* parte sotto nav laterale */
-
 /* navbar laterale */
+
+main{
+  height: calc(100vh - 100px);
+  overflow-y: auto;
+  display: flex;
+}
+
+section{
+  background-color: red;
+  height: 150px;
+  width: 500px;
+  flex-wrap: wrap;
+
+}
 
 /* main */
 
 /* footer */
 footer{
-  height: 80px;
+  height: 100px;
   background-color: #282828;
 }
 /* footer */
@@ -253,7 +261,6 @@ and (min-width: 768px){
       margin-right: 0px;
       color: #595959;
       font-size: 30px;
-
     }
 
     /* navbar laterale */
