--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -24,7 +24,7 @@ header{
   border: 1px solid #ffffff;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 10px 40px;
+  padding: 10px 30px;
   border-radius: 30px;
   font-size: 12px;
   margin-right: 10px;
@@ -38,8 +38,6 @@ header{
 }
 /* button upgrade */
 /* header */
-
-
 
 /* main */
 /* navbar laterale */
@@ -87,6 +85,12 @@ aside{
 .list-home a i{
   font-size: 20px;
   margin-right: 5px;
+}
+
+.list-home a svg{
+  font-size: 20px;
+  margin-right: 5px;
+  vertical-align: middle;
 }
 
 .list-home a:hover{
@@ -154,17 +158,54 @@ aside{
 
 main{
   height: calc(100vh - 100px);
-  overflow-y: auto;
   display: flex;
 }
 
-section{
-  background-color: red;
-  height: 150px;
-  width: 500px;
-  flex-wrap: wrap;
-
+.body-main{
+  width: calc(100% - 200px);
+  overflow-y: auto;
+  background-color: #141922;
+  margin-top: 80px;
 }
+
+/* paragrafi sopra */
+.p-title{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.p-title div a{
+  text-decoration: none;
+  color: #6F7176;
+  text-transform: uppercase;
+}
+
+.p-title div a:hover{
+  color: #ffffff;
+}
+
+.p-title > div{
+  display: inline-block;
+  padding: 15px 15px;
+  font-size: 14px;
+}
+
+
+.p-title #line-green{
+  height: 2px;
+  width: 50px;
+  background-color: #ADFF2F;
+  margin-left: 15px;
+}
+/* paragrafi sopra */
+
+/* ascoltati di recente */
+
+
+
+
+
 
 /* main */
 
@@ -195,6 +236,10 @@ and (min-width: 768px){
 
     aside{
       width: 50px;
+    }
+
+    .body-main{
+      width: calc(100% - 50px);
     }
 
     .logo{
