--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -201,30 +201,42 @@ main{
 /* paragrafi sopra */
 
 /* ascoltati di recente */
+.recently{
+  margin: 0 auto;
+  width: 98%;
+}
 
 .recently > h2{
   color: #ffffff;
+  margin-left: 15px;
+  font-size: 25px;
 }
 
 .container-cover{
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+}
+
+.cover{
+  width: calc(100%/12*2);
+  margin-top: 20px;
+  padding-left: 15px;
 }
 
 .cover img{
-  height: 200px;
+  width: 100%;
 }
 
 .cover h4{
   color: #ffffff;
   text-align: center;
   margin-top: 20px;
+  font-size: 16px;
 }
 
 .cover p{
   color: #6D6F74;
   text-align: center;
+  font-size: 13px;
 }
 
 
@@ -241,15 +253,40 @@ footer{
 /* footer */
 
 /* media query */
-/* @media all and (max-width: 1200px)
+@media all and (max-width: 1200px)
 and (min-width: 992px){
+  .container-cover{
+    display: flex;
+    flex-wrap: wrap;
+  }
 
+  .cover{
+    width: calc(100%/12*3);
+    padding-left: 0px;
+  }
+
+  .cover img{
+    width: 90%;
+  }
 }
 
 @media all and (max-width: 992px)
 and (min-width: 768px){
+  .container-cover{
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-  } */
+  .cover{
+    width: calc(100%/12*6);
+    padding-left: 15px;
+  }
+
+  .cover img{
+    width: 100%;
+  }
+
+}
 
   @media all and (max-width: 768px){
     /* navbar laterale */
@@ -331,6 +368,18 @@ and (min-width: 768px){
       color: #595959;
       font-size: 30px;
     }
-
     /* navbar laterale */
+    .container-cover{
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .cover{
+      width: calc(100%/12*6);
+      padding-left: 15px;
+    }
+
+    .cover img{
+      width: 100%;
+    }
   }
