--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -248,16 +248,122 @@ main{
   border-radius: 50%;
 }
 
-
-
+/* hover cover */
 
 /* main */
 
 /* footer */
+/* footer left */
 footer{
   height: 100px;
   background-color: #282828;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.foot-left{
+  display: flex;
+  margin-left: 10px;
+}
+
+.foot-left > div {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.foot-left h5{
+  color: #ffffff;
+  font-size: 14px;
+}
+
+.foot-left p{
+  color: #6D6F74;
+  font-size: 12px;
+}
+
+.foot-left a i{
+  color: #6D6F74;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  padding-left: 20px;
+}
+/* footer left */
+
+/* footer central */
+.play-section a{
+  text-decoration: none;
+  color: #ffffff;
+  padding-left: 35px;
+  position: relative;
+  left: 100px;
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+.play-section a:nth-child(3){
+  font-size: 35px;
+}
+
+.riproduzione{
+  display: flex;
+  align-items: center;
+}
+
+.riproduzione a{
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.riproduzione div:first-of-type{
+  height: 3px;
+  background-color: #ffffff;
+  width: 100px;
+  margin-left: 30px;
+  border-radius: 5px;
+}
+
+.riproduzione div:last-of-type{
+  height: 3px;
+  background-color: #6D6F74;
+  width: 330px;
+  margin-right: 30px;
+  border-radius: 5px;
+}
+/* footer central */
+
+/* footer right */
+.foot-right{
+  display: flex;
+  align-items: center;
+}
+
+.foot-right a{
+  color: #ffffff;
+  text-decoration: none;
+  padding-right: 20px;
+}
+
+.foot-right div:first-of-type{
+  height: 3px;
+  background-color: #ffffff;
+  width: 30px;
+  border-radius: 5px;
+}
+
+.foot-right div:last-of-type{
+  height: 3px;
+  background-color: #6D6F74;
+  width: 80px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+/* footer right */
 /* footer */
 
 /* media query */
