--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2,6 +2,7 @@
 header{
   width: calc(100vw - 200px);
   position: fixed;
+  z-index: 3;
   top: 0;
   right: 0;
 }
@@ -227,9 +228,6 @@ main{
   padding-left: 15px;
 }
 
-.cover img{
-  width: 100%;
-}
 
 .cover h4{
   color: #ffffff;
@@ -248,7 +246,40 @@ main{
   border-radius: 50%;
 }
 
+.cover img{
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
 /* hover cover */
+.cover:hover img{
+  cursor: pointer;
+  opacity: 0.3;
+}
+
+.cover:hover .over-img {
+  opacity: 1;
+}
+
+.over-img{
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.over-img i{
+  font-size: 40px;
+  color: #ffffff;
+}
+
 
 /* main */
 
@@ -418,7 +449,7 @@ and (min-width: 768px){
   }
 
   .cover{
-    width: calc(100%/12*6);
+    width: calc(100%/12*3);
     padding-left: 15px;
   }
 
